RESOLVED FIXED36199
Canvas rgb() color parsing still slow
https://bugs.webkit.org/show_bug.cgi?id=36199
Summary Canvas rgb() color parsing still slow
Stephen White
Reported 2010-03-16 15:55:05 PDT
Canvas rgb() color parsing still slow
Attachments
Patch (4.13 KB, patch)
2010-03-17 10:57 PDT, Stephen White
no flags
Stephen White
Comment 1 2010-03-17 10:57:21 PDT
Oliver Hunt
Comment 2 2010-03-17 12:57:42 PDT
Comment on attachment 50925 [details] Patch r=me, what's your testcase? and what's the improvement? --Oliver
Stephen White
Comment 3 2010-03-17 13:03:53 PDT
(In reply to comment #2) > (From update of attachment 50925 [details]) > r=me, what's your testcase? and what's the improvement? Test case is Peacekeeper "Complex Graphics". Yields ~8% gain in Chromium/Win.
WebKit Commit Bot
Comment 4 2010-03-18 05:30:20 PDT
Comment on attachment 50925 [details] Patch Clearing flags on attachment: 50925 Committed r56155: <http://trac.webkit.org/changeset/56155>
WebKit Commit Bot
Comment 5 2010-03-18 05:30:25 PDT
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 6 2010-03-18 09:35:29 PDT
The committed patch didn't have reviewer name in ChangeLog.
Eric Seidel (no email)
Comment 7 2010-03-18 09:55:29 PDT
The commit bot looks for and replaces "Reviewed by NOBODY(OOPS!)" with the correct information. Given the recent reviewer parsing added in http://trac.webkit.org/changeset/56137 it would be possible to finally write a minimal fix for https://bugs.webkit.org/show_bug.cgi?id=26927 Until then, please dont' change the Reviewed by NOBODY line.
Stephen White
Comment 8 2010-03-18 10:08:53 PDT
(In reply to comment #7) > The commit bot looks for and replaces "Reviewed by NOBODY(OOPS!)" with the > correct information. > > Given the recent reviewer parsing added in > http://trac.webkit.org/changeset/56137 > it would be possible to finally write a minimal fix for > https://bugs.webkit.org/show_bug.cgi?id=26927 > > Until then, please dont' change the Reviewed by NOBODY line. (In reply to comment #7) > The commit bot looks for and replaces "Reviewed by NOBODY(OOPS!)" with the > correct information. > > Given the recent reviewer parsing added in > http://trac.webkit.org/changeset/56137 > it would be possible to finally write a minimal fix for > https://bugs.webkit.org/show_bug.cgi?id=26927 > > Until then, please dont' change the Reviewed by NOBODY line. Sorry about that. I must've deleted it by mistake. Should I land a patch to fix the ChangeLog?
Note You need to log in before you can comment on or make changes to this bug.